--- a/process.ipynb
+++ b/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,46 +34,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CSVImageMetadataDataset(csv_file='./data/vaynen_train.csv', root_dir=os.path.join(root_folder,'train'), transform=transform)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'12': 0, '13': 1, '14': 2}\n",
-      "torch.Size([32, 28]) torch.Size([32])\n"
-     ]
-    }
-   ],
-   "source": [
     "# Define image transformations\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((128, 128)),  # Resize images to 128x128\n",
     "    transforms.Grayscale(num_output_channels=1),    # Convert to grayscale\n",
     "    llf,\n",
     "    # transforms.ToTensor(),  # Convert to tensor\n",
-    "])\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = CSVImageMetadataDataset(csv_file='./data/vaynen_train.csv', root_dir=root_folder, transform=transform)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=4)   \n",
     "\n",
-    "# Load dataset\n",
-    "train_dataset = datasets.ImageFolder(root=os.path.join(root_folder,\"train\"), transform=transform)\n",
-    "test_dataset = datasets.ImageFolder(root=os.path.join(root_folder,'test'), transform=transform)\n",
-    "\n",
-    "# Create DataLoaders\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=4)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=4)\n",
-    "\n",
-    "# Print class mapping\n",
-    "print(train_dataset.class_to_idx)  # Example output: {'cat': 0, 'dog': 1}\n",
+    "test_dataset = CSVImageMetadataDataset(csv_file='./data/vaynen_test.csv', root_dir=root_folder, transform=transform)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=4)\n",
     "\n",
     "# Check one batch\n",
-    "images, labels = next(iter(test_loader))\n",
-    "print(images.shape, labels.shape)  # Output: torch.Size([32, 3, 128, 128]), torch.Size([32])\n"
+    "images, metadata, labels = next(iter(train_dataloader))\n",
+    "print(images.shape)  # Example: torch.Size([32, 3, 128, 128])\n",
+    "print(metadata.shape)  # Example: torch.Size([32, 6])  -> 6 metadata features\n",
+    "print(labels.shape)  # Example: torch.Size([32])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SimpleNeuralNetwork(inputs = llf.get_features_size())\n",
+    "\n",
+    "# Check the model's architecture\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_model(model, train_dataloader, epochs=100, features_set=llf.function.__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_model(model, test_dataloader, features_set=llf.function.__name__)\n"
    ]
   }
  ],
