--- a/process_csv.ipynb
+++ b/process_csv.ipynb
@@ -394,6 +394,37 @@
     "df_vaynen_test.to_csv(\"data/vaynen_test.csv\", index=False)\n",
     "df_vaynen_train.to_csv(\"data/vaynen_train.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "import os\n",
+    "\n",
+    "df = pd.read_csv(\"./data/vaynen_test.csv\", delimiter=',')\n",
+    "for i in range(len(df['image'])):\n",
+    "    df['image'][i] = os.path.join('test', str(int(df['label_id'][i])), df['image'][i])\n",
+    "\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"./data/vaynen_train.csv\", delimiter=',')\n",
+    "df.drop(columns=df.columns[0], inplace=True)\n",
+    "# df['label_id'] = df['label_id'].apply(lambda x: float(x) - 12)\n",
+    "\n",
+    "df.to_csv(\"./data/vaynen_train.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
