now trainable, but nan loss T_T

--- a/process_csv.ipynb
+++ b/process_csv.ipynb
@@ -413,17 +413,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"./data/vaynen_train.csv\", delimiter=',')\n",
-    "df.drop(columns=df.columns[0], inplace=True)\n",
-    "# df['label_id'] = df['label_id'].apply(lambda x: float(x) - 12)\n",
+    "df = pd.read_csv(\"./data/vaynen_test.csv\", delimiter=',')\n",
+    "df['image'] = df['image'].apply(lambda x: x.replace('\\\\', '/'))\n",
+    "df.to_csv(\"./data/vaynen_test_linux.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
     "\n",
-    "df.to_csv(\"./data/vaynen_train.csv\", index=False)\n"
+    "# Load the CSV file into a DataFrame\n",
+    "df = pd.read_csv(\"data/vaynen_train_linux.csv\")\n",
+    "df['label_id'].isna().sum()"
    ]
   }
  ],
