--- a/process_csv.ipynb
+++ b/process_csv.ipynb
@@ -447,6 +447,41 @@
     "df = pd.read_csv(\"data/vaynen_train_linux.csv\")\n",
     "df['label_id'].isna().sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "#Load single threaded csv\n",
+    "single_thread_df = pd.read_csv(\"./data/vaynen_test_fos.csv\")\n",
+    "\n",
+    "#Load multi threaded csv\n",
+    "multi_thread_df = pd.read_csv(\"test.csv\")\n",
+    "\n",
+    "single_thread_df.equals(multi_thread_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
