--- a/process_csv.ipynb
+++ b/process_csv.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,10 +468,10 @@
     "import pandas as pd\n",
     "\n",
     "#Load single threaded csv\n",
-    "single_thread_df = pd.read_csv(\"./data/vaynen_test_fos.csv\")\n",
+    "single_thread_df = pd.read_csv(\"./data/fos/vaynen_test_fos.csv\")\n",
     "\n",
     "#Load multi threaded csv\n",
-    "multi_thread_df = pd.read_csv(\"test.csv\")\n",
+    "multi_thread_df = pd.read_csv(\"../../skin_data/vaynen_test_fos_mp.csv\")\n",
     "\n",
     "single_thread_df.equals(multi_thread_df)"
    ]
