--- a/process.ipynb
+++ b/process.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llf = LowLevelFeatureExtractor(**param_list[0])\n",
+    "llf = LowLevelFeatureExtractor(**param_list[17])\n",
     "\n",
     "# root_folder = \"C:\\\\Users\\\\trong\\\\Documents\\\\skin_data\"\n",
     "root_folder = \"/mnt/c/Users/trong/Documents/skin_data\" "
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +44,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 128, 128])\n",
+      "torch.Size([32, 6])\n",
+      "torch.Size([32])\n"
+     ]
+    }
+   ],
    "source": [
-    "train_dataset = CSVImageMetadataDataset(csv_file='./data/vaynen_train_linux.csv', root_dir=root_folder, transform=transform)\n",
+    "train_dataset = CSVImageMetadataDataset(csv_file='./data/linux/vaynen_train_linux.csv', root_dir=root_folder, transform=transform)\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=4)   \n",
     "\n",
-    "test_dataset = CSVImageMetadataDataset(csv_file='./data/vaynen_test_linux.csv', root_dir=root_folder, transform=transform)\n",
+    "test_dataset = CSVImageMetadataDataset(csv_file='./data/linux/vaynen_test_linux.csv', root_dir=root_folder, transform=transform)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=4)\n",
     "\n",
     "# Check one batch\n",
@@ -57,6 +67,46 @@
     "print(images.shape)  # Example: torch.Size([32, 3, 128, 128])\n",
     "print(metadata.shape)  # Example: torch.Size([32, 6])  -> 6 metadata features\n",
     "print(labels.shape)  # Example: torch.Size([32])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llf.get_features_size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 14)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llf(images).shape"
    ]
   },
   {
@@ -173,6 +223,34 @@
    ],
    "source": [
     "evaluate_model(model, test_dataloader,llf=llf, features_set=llf.function.__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fos', 'glcm_features', 'glds_features', 'linux', 'wp_features']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_folder =\"./data\"\n",
+    "list_of_datas = [x for x in os.listdir(data_folder) if os.path.isdir(os.path.join(data_folder, x))]\n",
+    "print(list_of_datas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_list[10]"
    ]
   }
  ],
