--- a/process.ipynb
+++ b/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llf = LowLevelFeatureExtractor(**param_list[17])\n",
+    "llf = LowLevelFeatureExtractor(**param_list[10])\n",
     "\n",
     "# root_folder = \"C:\\\\Users\\\\trong\\\\Documents\\\\skin_data\"\n",
     "root_folder = \"/mnt/c/Users/trong/Documents/skin_data\" "
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -71,16 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30"
+       "14"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,6 +107,75 @@
    ],
    "source": [
     "llf(images).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n",
+      "torch.Size([128, 128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(32):\n",
+    "    print(images[i].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14,)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llf.process_single_image(np.array(images[0]),  resize=False).shape"
    ]
   },
   {
@@ -227,30 +296,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['fos', 'glcm_features', 'glds_features', 'linux', 'wp_features']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'function': <function pyfeats.multiscale.gt.gt_features(f, mask, deg=4, freq=[0.05, 0.4])>,\n",
+       " 'params': {'mask': None, 'deg': 4, 'freq': [0.05, 0.4]},\n",
+       " 'features_set': ['features']}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_folder =\"./data\"\n",
-    "list_of_datas = [x for x in os.listdir(data_folder) if os.path.isdir(os.path.join(data_folder, x))]\n",
-    "print(list_of_datas)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param_list[10]"
+    "param_list[18]"
    ]
   }
  ],
