--- a/process.ipynb
+++ b/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -107,55 +107,6 @@
    ],
    "source": [
     "llf(images).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n",
-      "torch.Size([128, 128])\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(32):\n",
-    "    print(images[i].shape)"
    ]
   },
   {
@@ -296,24 +247,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = \"/mnt/c/Users/trong/Documents/skin_data/train/12/image_uuid_000e1f2d-7442-4cdb-89d0-b8350ecdebbb_created_by_haianh.31297_MTwJXvl.png\"\n",
+    "\n",
+    "p = transform(Image.open(image_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tas_features\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'function': <function pyfeats.multiscale.gt.gt_features(f, mask, deg=4, freq=[0.05, 0.4])>,\n",
-       " 'params': {'mask': None, 'deg': 4, 'freq': [0.05, 0.4]},\n",
-       " 'features_set': ['features']}"
+       "(54,)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "param_list[18]"
+    "llf = LowLevelFeatureExtractor(**param_list[21])\n",
+    "\n",
+    "print(llf.function.__name__)\n",
+    "\n",
+    "llf.process_single_image(np.array(p)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "type(cv2.resize(np.array(images[0]), (256, 256)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(54,)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p =np.random.randint(0,256,size=(100,100)).astype('uint8')\n",
+    "llf.process_single_image(np.array(p)).shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amfm_features id: 15\n",
+      "tas_features id: 21\n",
+      "hog_features id: 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_folder = os.listdir(\"./data\")\n",
+    "\n",
+    "for param in param_list:\n",
+    "    name = param['function'].__name__\n",
+    "    if name not in data_folder:\n",
+    "        print(f\"{name} id: {param_list.index(param)}\")\n",
+    "\n"
    ]
   }
  ],
