--- a/process.ipynb
+++ b/process.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,67 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "llf.get_features_size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(32, 14)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "llf(images).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14,)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "llf.process_single_image(np.array(images[0]),  resize=False).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,33 +198,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tas_features\n"
+      "hog_features\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(54,)"
+       "array([0.14839619, 0.11355118, 0.20146944, ..., 0.08740602, 0.01744466,\n",
+       "       0.06479176])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llf = LowLevelFeatureExtractor(**param_list[21])\n",
+    "llf = LowLevelFeatureExtractor(**param_list[22])\n",
     "\n",
     "print(llf.function.__name__)\n",
     "\n",
-    "llf.process_single_image(np.array(p)).shape"
+    "llf.process_single_image(np.array(p))"
    ]
   },
   {
@@ -311,6 +252,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(param_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -332,27 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "amfm_features id: 15\n",
-      "tas_features id: 21\n",
-      "hog_features id: 22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_folder = os.listdir(\"./data\")\n",
     "\n",
     "for param in param_list:\n",
     "    name = param['function'].__name__\n",
     "    if name not in data_folder:\n",
-    "        print(f\"{name} id: {param_list.index(param)}\")\n",
-    "\n"
+    "        print(f\"{name} id: {param_list.index(param)}\")"
    ]
   }
  ],
